# Genesis

./: .env  .gitignore  ADDING_A_MODULE.md  ADDING_A_TOOL.md  Dockerfile.workspace  LAUNCHER_README.md  MISSION.md  MISSION.md.example  README.md  WINDOWS_ZIP_TROUBLESHOOTING.md  app.py  config.yaml  docker-compose.yml  gradio_interface.py  install_all.sh  interface.py  main.py  memory.db  requirements.txt  setup.sh
BROWSER_DOWNLOAD/: READ_THIS_IN_BROWSER.txt
BlackZero/brain/: executor.py  loop.py  planner.py  router.py
BlackZero/diagnostics/: doctor.py  healthcheck.py
BlackZero/identity/: mission.md  personality.yaml
BlackZero/memory/: memory_manager.py  memory_schema.py
BlackZero/models/: model_router.py  provider_adapter.py
BlackZero/policies/: governance.md  permissions.md  safety.md
BlackZero/rag/: embedding_router.py  indexer.py  retriever.py
BlackZero/storage/: sqlite_store.py  vector_store.py
BlackZero/tests/: brain_tests.py  hardening_tests.py  structure_tests.py  (+1 more)
SAVED_BACKUPS/: OPEN_THIS_FIRST.txt
agents/: engineer.py  tool_helper.py
ai_starter/: DEPLOYMENT_GUIDE.md  ENHANCEMENTS.md  FINAL_SUMMARY.md  PLAN_CHECKLIST.md  RELEASE_NOTES.md  config.yaml  mission.example.txt  pyproject.toml
ai_starter/ai_starter/config/: settings.py
ai_starter/ai_starter/core/: loop.py
ai_starter/ai_starter/improvement/: adaptation.py
ai_starter/ai_starter/integrations/: langchain_adapter.py  langgraph_workflow.py  mcp.py
ai_starter/ai_starter/llm/: client.py  prompt_builder.py  schemas.py
ai_starter/ai_starter/memory/: schemas.py  storage.py
ai_starter/ai_starter/tools/: executor.py  registry.py
ai_starter/tests/: test_llm.py  test_memory.py
android_deploy/: __init__.py  __main__.py  config.py
api/: ai.py  audio.py  chat.py  delivery.py  memory_routes.py
brain_trainer/: README.md  auto_train.sh  setup.py  train.py  trainer_ui.py
cb_core/: README.md
chat-ui/: package-lock.json  package.json
config/: model_routing.json  priorities.json
core/: agent.py  executor.py  planner.py  task_queue.py
data/: memory.db
docker/: .dockerignore  .env.example  DOCKER_SETUP.md  Dockerfile  README.md  WORKSPACE.md  docker-compose.prod.yml  docker-compose.yml  docker-start.sh
docs/: MISSION.md  architecture.md  blackzero_spec.md  eng0_refactor.md  genesis_rules.md
eas_build/: config.py
emulator/: __main__.py  config.py
examples/: custom_search_tool.py  workspace_example.py
modules/: base.py
ollamactl/: config.py
pending/: custom_search_tool.py  gradio_interface.py  launcher.sh  requirements.txt  test_all.sh
pending/tablet_assistant/: README.md  pyproject.toml
pending/tablet_assistant/tablet_assistant/: adb_bridge.py  overlay_generator.py  tablet_companion.py  vision_assistant.py
pending/vision_engine/: pyproject.toml
pending/vision_engine/tests/: test_basic.py
pending/vision_engine/vision_engine/: __init__.py
rasa_module/: README.md  pyproject.toml  test_agent.py
rasa_module/rasa_module/: ollama_policy.py
rasa_module/tests/: test_basic.py
runpod_module/: .env.example  README.md
scheduler/: pyproject.toml
scheduler/scheduler/: core.py  triggers.py
scheduler/tests/: conftest.py
scripts/: android_deploy.py  autonomous_loop.py  eas_build.py  emulator.py  ios_deploy.py  ollamactl.py  refactor_eng0_from_genesis_template.sh  remote_control.py  run_tests.py  tailscale_check.py  watchdog.py
static/: delivery.html  manifest.json
tablet_assistant/: .gitignore  FEATURES.md  setup.sh
tailscale_check/: checker.py
task_progress/: demo.py  queue.py
tests/: __init__.py  test_framework.py  test_messaging.py
tools/: workspace_tool.py
twilio_module/: requirements.txt  setup.py
ui/: tokens.py
vision_engine/: README.md
watchdog/: __init__.py  config.py  monitor.py
wix_connector/: setup.py
(+291 files in other folders)
