[project]
name = "rasa-module"
version = "1.0.0"
description = "Modular Rasa NLU + Ollama backend"
requires-python = ">=3.10"
dependencies = [
    "rasa>=3.6.0",
    "pydantic>=2.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
plugops = [
    "websockets>=11.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
